# build-wheel

./: .gitignore  README.md  build_meta.py  pyproject.toml  setup.py
demos/: demo.py
libc/: __init__.c  hello.txt  main.c  main.py
libc.egg-info/: PKG-INFO  SOURCES.txt
